# Clippy-Front

./: .env.example  .env.worker.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.worker  HELP_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REFACTOR_WIZARD.md  ROUTES.md  TODO.md  WIZARD_REFACTOR_TODO.md  WORKER_API_MIGRATION.md  WORKER_SETUP.md  WORKER_VERSION_FIX.md  celery_worker.py  check_worker_logs.sh  compose.worker.override.yaml  compose.worker.override.yaml.example  compose.worker.tundra.yaml  compose.worker.yaml  coverage.json  init_db.py  main.py  pyproject.toml  repo-snapshot.sh  requirements.txt  setup_dev.sh  start_dev.sh  watch_and_commit.sh
.github/: copilot-instructions.md
.repo_snapshot/: 00_git_overview.md  env_keys.txt
app/: __init__.py  activity.py  audio_metadata.py  cache.py  error_utils.py  ffmpeg_config.py  logging_config.py  mailer.py  models.py  notifications.py  push.py  quotas.py  storage.py  structured_logging.py  team_permissions.py  version.py  worker_version_check.py
config/: settings.py
docker/: artifact-sync.Dockerfile  celery-worker.Dockerfile  docker-compose.gpu-worker-sync.yml  docker-compose.gpu-worker.example.yml  docker-compose.gpu-worker.yml  worker-combined.Dockerfile  worker.Dockerfile
docs/: ANALYTICS.md  ANALYTICS_WIKI.md  BINARY_UPDATES.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DATABASE_ISOLATION.md  DEPLOYMENT.md  DEVELOPMENT.MD  DEVELOPMENT.md  DISCORD_INTEGRATION.md  ERROR_HANDLING_AUDIT.md  FEATURES.MD  FEATURES.md  HELP_SYSTEM.md  HELP_USER_GUIDE.md  INSTALLATION.MD  INSTALLATION.md  (+32 more)
(+311 files in other folders)
